client/src/index.scss
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");

// Variables
$breakpoint: 950px;

// Site Header
$site_header_padding_vertical: 16px;
$site_header_links_gap: 32px;
$site_header_font_size: 23px;
$site_header_background_color: white;

// Page Content
$page_margin_horizontal: 142px;
$page_margin_vertical: 56px;
$section_heading_font_size: 2.074rem;
$body_text_heading_font_size: 1.44rem;
$large_body_text_font-size: 1.44rem;


* {
	padding: 0;
	margin: 0;
}

body {
	font-family: "Ubuntu", sans-serif;
	div#root {
		img {
			max-width: 100%;
			height: auto;
		}

		a {
			text-decoration: none;
			color: inherit;
		}

		ul {
			list-style-type: none;
		}

		header.site-header {
			padding: $site_header_padding_vertical $page_margin_horizontal;
			font-size: $site_header_font_size;

			display: flex;
			flex-flow: row nowrap;
			justify-content: space-between;
			align-items: center;

			position: sticky;
			top: 0;
			z-index: 100;
			background-color: $site_header_background_color;

			// Temporary
			border-bottom: 1px solid lightgray;

			ul {
				display: flex;
				flex-flow: row nowrap;
				justify-content: space-between;
				align-items: center;
				gap: $site_header_links_gap;
			}
		}

		div.home-banner, div.tools-banner {
			// Home banner variables
			$home_banner_padding: 10.5rem $page_margin_horizontal;
			$home_banner_heading_font_size: 2.488rem;
			$home_banner_heading_font_weight: 500;
			$home_banner_paragraph_font_size: 1.75rem;
			$home_banner_gap: 1.5rem;


			background-color: lightgray;
			min-height: 10vh;
			padding: $home_banner_padding;
			display: flex;
			flex-flow: column nowrap;
			align-items: flex-start;
			gap: $home_banner_gap;

			h2 {
				font-size: $home_banner_heading_font_size;
				font-weight: $home_banner_heading_font_weight;
				max-width: 45%;
			}

			p {
				font-size: $home_banner_paragraph_font_size;
				color: rgb(105, 105, 105);
				max-width: 45%;
			}

			button {
				margin-top: 32px;
				width: 200px;
				height: 50px;
				border-radius: 4px;
				font-size: 19px;
				font-family: inherit;
				border: none;
				text-transform: capitalize;
				cursor: pointer;
			}
		}

		div.tools-banner {
			align-items: flex-end;
		}

		.page-content {
			padding: $page_margin_vertical $page_margin_horizontal;

			#articles {
				// Article page variables
				$articles_row_gap: 3.5rem;
				$articles_column_gap: 2rem;

				display: grid;
				grid-template-columns: repeat(3, 1fr);
				column-gap: $articles_column_gap;
				row-gap: $articles_row_gap;

				@media screen and (max-width: $breakpoint) {
					grid-template-columns: repeat(1, 1fr);
				}

				.article-list-item {
					display: flex;
					flex-flow: column nowrap;
					justify-content: center;
					gap: .5rem;

					img {
						width: 100%;
						height: auto;
					}
				}
			}

			#readEvNews {
				margin-top: 56px;
				display: flex;
				flex-flow: row nowrap;
				align-items: center;
				justify-content: center;

				button {
					margin-top: 32px;
					width: 200px;
					height: 50px;
					border-radius: 4px;
					font-size: 16px;
					font-family: inherit;
					border: none;
					margin-bottom: 28px;
					text-transform: capitalize;
					cursor: pointer;
				}
			}

			section {
				&#evIntro {
					text-align: center;
					display: flex;
					flex-flow: column nowrap;
					gap: 32px;

					h2 {
						font-size: 33px;
						font-weight: 500;
						text-transform: capitalize;
					}

					p {
						font-size: 23px;
						font-weight: 400;
					}
				}

				&#typesOfEvs {
					display: flex;
					flex-flow: column nowrap;
					gap: 32px;
					margin-top: 120px;
					text-align: center;

					h2 {
						text-transform: capitalize;
						font-size: 33px;
						font-weight: 500;
					}

					ul.ev-types {
						display: flex;
						flex-flow: row nowrap;
						gap: 2rem;

						li {
							display: flex;
							flex-flow: column nowrap;
							gap: 32px;
							flex-basis: 30%;

							div	{
								height: 15vw;
								background-color: lightgray;
							}
						}
					}	
				}

				&#evMarket, &#evIncentives, &#evTimeline, &#salesFigures {
					display: flex;
					flex-flow: column nowrap;
					gap: 32px;
					margin-top: 120px;
					text-align: center;

					h2 {
						text-transform: capitalize;
						font-size: 33px;
						font-weight: 500;
					}

					select {
						max-width: max-content;
					}

					div {
						svg {
							width: 100%;
							height: 50vw;
							max-height: 400px;
							overflow: visible;

							g.tick {
								line {
									stroke: lightgray;
								}
							}
						}
					}
				}

				&#findAnEv {
					margin-top: 56px;
					display: flex;
					flex-flow: row nowrap;
					align-items: center;
					justify-content: space-between;

					div {
						display: flex;
						flex-flow: column nowrap;
						gap: 32px;

						h3 {
							font-size: 28px;
							font-weight: 500;

						}

						p {
							font-size: 23px;
						}
					}

					button {
						width: 200px;
						height: 50px;
						border-radius: 4px;
						font-size: 16px;
						font-family: inherit;
						border: none;
						text-transform: capitalize;
						cursor: pointer;
					}
				}

				&#calculateCost, &#findEv {
					margin-top: 120px;
					margin-bottom: 64px;
					display: flex;
					flex-flow: column nowrap;
					gap: 32px;
					text-align: center;

					h2 {
						text-transform: capitalize;
						font-size: 33px;
						font-weight: 500;
					}

					div {
						height: 80vh;
						background-color: lightgray;
					}
				}

				&#findEv {
					margin-top: 64px;
				}

				&#teamMembers {
					// About Page Variables
					$team_members_gap: 56px;
					$team_heading_margin_bottom: 32px;
					$team_intro_margin_bottom: 72px;
					$team_member_image_margin_bottom: 24px;
					$team_member_name_margin_bottom: 8px;
					$team_member_role_margin_bottom: 8px;
					
					text-align: center;
					.section-heading {
						text-align: center;
						text-transform: capitalize;
						margin-bottom: $team_heading_margin_bottom;
						font-size: $section_heading_font_size;
						font-weight: 500;
					}

					.team-intro {
						margin-bottom: $team_intro_margin_bottom;
						font-weight: 400;
						font-size: $large_body_text_font-size;
					}

					& > div {
						display: flex;
						flex-flow: row wrap;
						justify-content: center;
						gap: $team_members_gap;

						.team-member {
							flex-grow: 1;
							flex-basis: 25%;
							display: flex;
							flex-flow: column nowrap;

							@media screen and (max-width: $breakpoint) {
								flex-basis: 100%;
							}

							img.team-member-image {
								border-radius: 50%;
								margin-bottom: $team_member_image_margin_bottom;
							}

							div.member-name-role {
								flex-grow: 1;
								
								p.team-member-name {
									margin-bottom: $team_member_name_margin_bottom;
									font-size: $body_text_heading_font_size;
									font-weight: 500;
								}
	
								p.team-member-role {
									margin-bottom: $team_member_role_margin_bottom;
									font-size: $body_text_heading_font_size;
									font-weight: 400;
								}
							}

							div.member-social-profile {
								display: flex;
								flex-flow: row nowrap;
								justify-content: center;
								align-items: center;
								gap: 1rem;

								svg {
									font-size: 2rem;
								}
							}
						}
					}
				}
			}
		}
	}
}

